# game-of-life

./: Board.cpp  CMakeLists.txt  Cell.cpp  main.cpp
include/: Board.h  Cell.h  game_helper.h
src/: Board.cpp  Cell.cpp  game_helper.cpp  main.cpp
